GOCDB-5.5 Release (TBC). No DB schema changes.  
  - Adding <RECOGNISED_IN_PROJECTS/>  element to the XML output of the get_user
    query to show which projects a user's roles apply to. This is needed for 
    multi-tenant where a single GOC instance can host multiple projects.  
  - Adding <SCOPES/> element to the XML output of the following PI queries: 
    get_site, get_service, get_service_endpoint, get_ngi, get_service_group 
  - Adding 'jquery.multiple.select.js' lib to allow selecting of multiple scopes when 
    filtering sites/services/ngis/sgs in the GUI. This also required use of PI queries to 
    create new service methods in order to take advantage of the filtering by 
    multiple scopes with scope and scope_match params.  
  - Bug fix to allow comma chars in the values of custom extension properties.  
    The presence of a comma in the value of an ext prop was previously clashing 
    with the ScopeQueryBuilder which explodes the scope string on commas. The 
    fix removes this clash.    
  - Adding JQuery Table sorter lib and applied to sorting of many tables including
    custom properties and downtimes. 
  - Role mapping and abstractions to define different roles on a per-project
    basis. Different roles are defined in the RoleActionMappings.xml 
    file. The mapping file defines which actions are enabled 
    for each role. The role types have to be pre-inserted into the DB.     
    This could be extended to define different role types per project 
    (with this release, users can have different role instances per project, but
    the role types are consistent across projects). 
  - New improved ExtensionsParser2.php implementation for tokenising  
    the value of the 'extensions' URL param in PI - the value 
    part of key=value expressions can now contain any char including escaped 
    parenthesis and html special chars. Note, this does not affect the input 