@@ -75,7 +75,7 @@ $serivceGroupProperties = $params['sGroup']->getServiceGroupProperties();
                         <a href="index.php?Page_Type=Scope_Help" style="word-wrap: normal">Scope(s)</a>
                     </td>
                     <td class="site_table">
-                        <input type="text" value="<?php xecho($params['sGroup']->getScopeNamesAsString())?>" readonly>
+			<textarea readonly="true" style="height: 22px;"><?php xecho($params['sGroup']->getScopeNamesAsString())?></textarea>
                     </td>
                 </tr>
                 <tr class="site_table_row_1">
@@ -106,18 +106,15 @@ $serivceGroupProperties = $params['sGroup']->getServiceGroupProperties();
 
             <?php
             $num = 2;
-
-			foreach($params['sGroup']->getServices() as $se) {
-
-	            if($se->getScopes()->first()->getName() == "Local") {
-					$style = " style=\"background-color: #A3D7A3;\"";
-				} else {
-					$style = "";
-				}
-
+	    foreach($params['sGroup']->getServices() as $se) {
+//	            if($se->getScopes()->first()->getName() == "Local") {
+//					$style = " style=\"background-color: #A3D7A3;\"";
+//				} else {
+//					$style = "";
+//				}
             ?>
 
-            <tr class="site_table_row_<?php echo $num ?>"<?php echo $style; ?>>
+            <tr class="site_table_row_<?php echo $num ?>">
                 <td class="site_table">
                     <div style="background-color: inherit;">
                        <div style="background-color: inherit;">
@@ -147,14 +144,15 @@ $serivceGroupProperties = $params['sGroup']->getServiceGroupProperties();
 				?>
 				</td>
                 <td class="site_table">
-                    <input type="text" value="<?php xecho($se->getScopeNamesAsString()) ?>" readonly>
+		    <textarea readonly="true" style="height: 22px;"><?php xecho($se->getScopeNamesAsString())?></textarea>
                 </td>
             </tr>
             <?php
-				if($num == 1) { $num = 2; } else { $num = 1; }
+		if($num == 1) { $num = 2; } else { $num = 1; }
             } // End of the foreach loop iterating over SEs
             ?>
         </table>
+	
         <!--  only show this link if we're in read / write mode -->
         <?php if(!$params['portalIsReadOnly'] && $params['ShowEdit']): ?>
             <!-- Add new Service Link -->
